--- a/Lessons/Lesson_11/.env
+++ b/Lessons/Lesson_11/.env
@@ -8,6 +8,8 @@ MAX_CONNECTIONS = 5
 MAX_PACKAGE_LENGTH = 1024
 # Кодировка проекта
 ENCODING = 'utf-8'
+# База данных для хранения данных сервера в SQLite:
+SERVER_DATABASE = 'sqlite:///server_chat.db3'
 
 # Протокол JIM основные ключи:
 ACTION = 'action'
